crossbrowser (not allowed)

--- a/src/main/resources/configTs.properties
+++ b/src/main/resources/configTs.properties
@@ -12,6 +12,18 @@ browserUpPanel = 20
 browserScroll = 10
 
 browserNameDefault = firefox
+browser_name = ${browser_name}
+
+
 browDriverName = webdriver.gecko.driver
-browDriverPath = ${browser.path}
+
+fireFoxDriverName = webdriver.gecko.driver
+fireFoxDriverPath = d:/taa/install/geckodriver-v0.17.0-win64/geckodriver.exe
+
+chromeDriverName = webdriver.chrome.driver
+chromeDriverPath = d:/taa/install/chromedriver_win32/chromedriver.exe
+
+browDriverPath = d:/taa/install/geckodriver-v0.17.0-win64/geckodriver.exe
+
+
 browserName = ${browser.name}
