--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,39 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <profiles>
+        <profile>
+            <id>ff</id>
+            <properties>
+                <browser_name>firefox</browser_name>
+            </properties>
+        </profile>
+        <profile>
+            <id>ch</id>
+            <properties>
+                <browser_name>chrome</browser_name>
+            </properties>
+        </profile>
+    </profiles>
+
 
     <build>
+        <resources>
+            <resource>
+                <directory>\src\main\resources\</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <!-- specify UTF-8, ISO-8859-1 or any other file encoding -->
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -42,4 +72,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
