new test /authorizationIncorrect/

--- a/src/main/resources/configTs.properties
+++ b/src/main/resources/configTs.properties
@@ -5,6 +5,8 @@ friendName2 = \u0410\u043B\u0435\u043A\u0441\u0435\u0439 \u041A\u043E\u0437\u043
 e_mail = alexey.kozlovets@gmail.com
 tel1 = +380679615120
 password = Klerfe84
+password_failed = qwe
+
 photoPath = d:/taa/PHOTO2/example.jpg
 monitorWidth = 1280
 monitorHeight = 720
